Fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 }
 
 body {
+    overflow: hidden;
     background-color: hsl(30, 38%, 92%);
 }
 
